--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <meta charset="utf-8" />
     <title>Basic HTML/Tailwind starter</title>
     <meta name="description" content="Basic HTML/Tailwind starter" />
     <meta name="author" content="Daily Dev Tips" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body>
-    <div class="w-screen h-screen bg-daily-dev-tips flex items-center justify-center">Welcome</div>
+  <body class="bg-indigo-600 h-full">
+    <h1 class="uppercase font-bold tracking-wider text-xl py-10 text-white w-3/4 m-auto md:w-full md:pl-8 lg:w-[1000px] lg:m-auto">Welcome</h1>
+    <div class="rounded-tl-[32px] bg-white min-h-full lg:pt-4 ">
+      <div class="flex flex-col md:flex-row lg:w-[1000px] lg:m-auto">
+        <div class="pt-10 w-3/4 m-auto md:m-0 md:px-8">
+        <div class="shadow-xl shadow-indigo-100 py-5 px-10 rounded-2xl flex justify-between">
+          <input id="folder-form" class="border-b-2 border-indigo-600 py-2" type="text" placeholder="Your new folder">
+          <button id="create-form" class="bg-indigo-600 text-white font-semibold tracking-wide px-4 py-2 rounded-xl ">Create</button>
+        </div>
+
+        <div id="folder-list" class="shadow-xl mt-0 rounded-bl-lg rounded-br-lg shadow-indigo-100 min-h-[100px] py-6">
+        </div>
+      </div>
+      
+      <div class="shadow-xl shadow-indigo-100 w-3/4 mx-auto min-h-[200px] rounded-2xl mt-10 py-5 md:py-0 mb-10 md:mt-10 md:min-h-[300px] md:mr-8">
+        <div class="flex justify-between px-10 md:pt-5">
+          <input id="task-input" class="border-b-2 border-indigo-600 py-2" type="text" placeholder="Your Task" readonly>
+          <button id="task-button" class="bg-gray-300 text-white rounded-xl px-4 py-2 cursor-default">+</button>
+        </div>
+        <div id="task"></div>
+      </div>
+      </div>
+    </div>
+    <script src='/src/index.js'></script>
   </body>
 </html>
