--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
               <button id="task-button" class="bg-gray-300 text-white rounded-xl px-4 py-2 cursor-default">+</button>
           </form>
         </div>
-        <div id="task"></div>
+        <ul id="task"></ul>
       </div>
       </div>
     </div>
