--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,10 @@
               <button id="task-button" class="bg-gray-300 text-white rounded-xl px-4 py-2 cursor-default">+</button>
           </form>
         </div>
-        <ul id="task"></ul>
+        <ul id="task" class="mb-5"></ul>
       </div>
       </div>
     </div>
-    <script type="module" src='/src/index.js'></script>
+    <script type="module" src='/src/todo.js'></script>
   </body>
 </html>
